--- a/css/style_index.css
+++ b/css/style_index.css
@@ -1,3 +1,3 @@
-head {
-    background-image: url("../images/image_accueil.webp");
+div {
+    background-image: url("../images/image_accueil.png");
 }
