--- a/css/style_index.css
+++ b/css/style_index.css
@@ -1,3 +1,8 @@
-div {
+#main {
     background-image: url("../images/image_accueil.png");
+    width: 100%;
+    height: 960px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
