--- a/css/style_classement.css
+++ b/css/style_classement.css
@@ -1,3 +1,34 @@
 body{
-    background-color: wheat;
+    background-color: white;
+}
+
+table{
+    border: 2px solid;
+    border-collapse:collapse;
+    text-align: center;
+}
+th{
+    border: 2px solid;
+    border-collapse:collapse;
+    text-align:center;
+}
+td{
+    border-collapse:collapse;
+    text-align: center;
+}
+
+
+.jaune{
+    color:#ffc800;
+}
+
+.rbleu{
+    color:royalblue;
+}
+
+.rouge{
+    color:red;
+}
+.fongris{
+    background-color: #e4e4e4;
 }
