--- a/css/style_statistique.css
+++ b/css/style_statistique.css
@@ -27,21 +27,34 @@
 
 body{
     margin :10%;
+    font-size: 15px;
+	line-height: 150%;
 }
 
 article{
     text-align: justify;
+    position: relative;
+	margin: auto;
 }
-p{
+h3{
     font-size: 100%;
 	text-align: center;
 	font-weight: bold;
 	text-transform: uppercase;
 	clear: both;
 }
-
 img{
-    float :left;
+    margin: 10px;
+    border-radius: 30px;
+    border-color :black;
+}
+
+#club{
+    float: right;
+}
+#troisième_bloc{
+    background-color: white;
+    color: black;
 }
 #deuxième_bloc{ 
 
