--- a/css/style_statistique.css
+++ b/css/style_statistique.css
@@ -1,3 +1,9 @@
+@media only screen
+and (min-device-width : 1024px)
+and (max-device-width : 5000px)
+and (orientation : landscape) {
+  /* Styles */
+
 @font-face {
     font-family: 'Poppins';
     src:    url('../Fonts/Poppins-Medium.woff2') format('woff2'),
@@ -46,7 +52,7 @@ h3{
 img{
     margin: 10px;
     border-radius: 30px;
-    border-color :black;
+    border :black solid;  
 }
 
 #club{
@@ -64,4 +70,81 @@ img{
 #quatrième_bloc {
     background-color:#0C4C8C;
     color: white;
+}
+}
+
+@media only screen
+and (min-device-width : 0px)
+and (max-device-width : 767px)
+and (orientation : portrait) {
+     /* Styles */
+
+@font-face {
+    font-family: 'Poppins';
+    src:    url('../Fonts/Poppins-Medium.woff2') format('woff2'),
+            url('../Fonts/Poppins-Medium.woff') format('woff'),
+            url('../Fonts/Poppins-Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src:    url('../Fonts/Poppins-Light.woff2') format('woff2'),
+            url('../Fonts/Poppins-Light.woff') format('woff'),
+            url('../Fonts/Poppins-Light.ttf') format('truetype');
+    font-weight: lighter;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src:    url('../Fonts/Poppins-LightItalic.woff2') format('woff2'),
+            url('../Fonts/Poppins-LightItalic.woff') format('woff'),
+            url('../Fonts/Poppins-LightItalic.ttf') format('truetype');
+    font-weight: lighter;
+    font-style: italic;
+}
+
+body{
+    margin :10%;
+    font-size: 15px;
+	line-height: 150%;
+    background-color: bisque;
+}
+
+article{
+    text-align: justify;
+    position: relative;
+	margin: auto;
+}
+h3{
+    font-size: 100%;
+	text-align: center;
+	font-weight: bold;
+	text-transform: uppercase;
+	clear: both;
+}
+img{
+    margin: 10px;
+    border-radius: 30px;
+    border :black solid;  
+}
+
+#club{
+    float: right;
+}
+#troisième_bloc{
+    background-color: white;
+    color: black;
+}
+#deuxième_bloc{ 
+
+    background-color:#0C4C8C; 
+    color: white;
+}
+#quatrième_bloc {
+    background-color:#0C4C8C;
+    color: white;
+}
 }
