--- a/css/style_statistique.css
+++ b/css/style_statistique.css
@@ -30,17 +30,61 @@ and (orientation : landscape) {
     font-weight: lighter;
     font-style: italic;
 }
+/style de la nav du haut/
 
+#nav_haut {
+    width: 100%;
+    background-color: #007fff;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    height: 130px;
+}
+
+#nav_haut ul {
+    width: 80%;
+    margin: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+#nav_haut ul a div {
+    display: inline-block;
+    width: 25%;
+    background-color: #0c4c8c;
+    margin-right: -5px;
+    padding: 0px;
+    height: 130px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+#nav_haut ul a div p {
+    margin-top: 45px;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 24px;
+}
+
+#nav_haut ul a:hover div {
+    background-color: #ffffff;
+}
+
+#nav_haut ul a:hover div p {
+    color: #000000;
+
+}
 body{
-    margin :10%;
+    
     font-size: 15px;
 	line-height: 150%;
 }
 
 article{
-    text-align: justify;
     position: relative;
-	margin: auto;
+	margin-left: 10%;
+    margin-right: 10%;
 }
 h3{
     font-size: 100%;
@@ -107,13 +151,15 @@ and (orientation : portrait) {
 }
 
 body{
-    margin :10%;
     font-size: 15px;
 	line-height: 150%;
-    background-color: bisque;
+
+    
 }
 
 article{
+    margin-left: 10%;
+    margin-right: 10%;
     text-align: justify;
     position: relative;
 	margin: auto;
@@ -122,13 +168,14 @@ h3{
     font-size: 100%;
 	text-align: center;
 	font-weight: bold;
-	text-transform: uppercase;
 	clear: both;
 }
 img{
-    margin: 10px;
+    margin-top: 10px;
+    margin-left: 40px;
     border-radius: 30px;
     border :black solid;  
+    width: 80%;
 }
 
 #club{
