--- a/css/style_statistique.css
+++ b/css/style_statistique.css
@@ -30,7 +30,7 @@ and (orientation : landscape) {
     font-weight: lighter;
     font-style: italic;
 }
-/style de la nav du haut/
+/*style de la nav du haut*/
 
 #nav_haut {
     width: 100%;
