--- a/css/style_statistique.css
+++ b/css/style_statistique.css
@@ -82,15 +82,17 @@ body{
 }
 
 article{
+    text-align: justify;
     position: relative;
 	margin-left: 10%;
     margin-right: 10%;
 }
 h3{
+    margin-left: 10px;
+    margin-right: 10px;
     font-size: 100%;
 	text-align: center;
-	font-weight: bold;
-	text-transform: uppercase;
+
 	clear: both;
 }
 img{
