--- a/css/style_index.css
+++ b/css/style_index.css
@@ -156,8 +156,9 @@ body {
     width: 65%;
     margin: auto;
     margin-top: 0px;
+    margin-bottom: 150px;
     background: #0c4c8c;
-    padding-top: 75px;
+    padding-top: 55px;
     padding-bottom: 75px;
     border-top: #00000033 solid;
     border-bottom-right-radius: 60px;
@@ -175,3 +176,62 @@ body {
 
 /*Style du caroussel*/
 
+.carousel {
+    margin: 0 auto;
+    padding: 20px 0;
+    max-width: 700px;
+    overflow: hidden;
+    display: flex;
+    > * {
+      flex: 0 0 100%;
+    }
+  }
+
+.card {
+    width: 100%;
+    color: white;
+    border-radius: 24px;
+    box-shadow: rgba(0, 0, 0, 10%) 5px 5px 20px 0;
+    padding: 0px;
+    font-size: xx-large;
+    justify-content: center;
+    align-items: center;
+    min-height: 200px;
+    overflow: hidden;
+}
+
+.card img {
+    height: 320px;
+}
+
+.card div p {
+    background-color: #0c4c8c;
+    margin: 0px;
+    font-size: 24px;
+    padding: 10px;
+    margin-top: -10px;
+}
+
+.group {
+    display: flex;
+    gap: 20px;
+    padding-right: 20px;
+    will-change: transform;
+    animation: scrolling 20s linear infinite;
+    
+}
+
+.carousel:hover .group {
+        animation-play-state: paused;
+}
+
+@keyframes scrolling {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+    
+    
