--- a/css/style_index.css
+++ b/css/style_index.css
@@ -163,6 +163,7 @@ body {
     border-top: #00000033 solid;
     border-bottom-right-radius: 60px;
     border-bottom-left-radius: 60px;
+    color: #ffffff;
 }
 
 #edito h2 {
@@ -189,6 +190,7 @@ body {
 
 .card {
     width: 100%;
+    height: 500px;
     color: white;
     border-radius: 24px;
     box-shadow: rgba(0, 0, 0, 10%) 5px 5px 20px 0;
@@ -201,15 +203,24 @@ body {
 }
 
 .card img {
-    height: 320px;
+    max-height: 320px;
+    margin-bottom: 0px;
+}
+
+.card #optimist {
+    width: 100%;
+}
+
+.card div {
+    background-color: #0c4c8c;
+    margin: 0px;
+    height: 100%;
+    padding: 15px;
+    margin-top: 0px;
 }
 
 .card div p {
-    background-color: #0c4c8c;
-    margin: 0px;
-    font-size: 24px;
-    padding: 10px;
-    margin-top: -10px;
+    font-size: 20px;
 }
 
 .group {
@@ -233,5 +244,3 @@ body {
       transform: translateX(-100%);
     }
   }
-    
-    
