--- a/css/style_sponsors.css
+++ b/css/style_sponsors.css
@@ -1,27 +1,27 @@
 
 @font-face {
     font-family: 'Poppins';
-    src:    url('../Fonts/Poppins-Medium.woff2') format('woff2'),
-            url('../Fonts/Poppins-Medium.woff') format('woff'),
-            url('../Fonts/Poppins-Medium.ttf') format('truetype');
+    src:    url('../fonts/Poppins-Medium.woff2') format('woff2'),
+            url('../fonts/Poppins-Medium.woff') format('woff'),
+            url('../fonts/Poppins-Medium.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Poppins';
-    src:    url('../Fonts/Poppins-Light.woff2') format('woff2'),
-            url('../Fonts/Poppins-Light.woff') format('woff'),
-            url('../Fonts/Poppins-Light.ttf') format('truetype');
+    src:    url('../fonts/Poppins-Light.woff2') format('woff2'),
+            url('../fonts/Poppins-Light.woff') format('woff'),
+            url('../fonts/Poppins-Light.ttf') format('truetype');
     font-weight: lighter;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Poppins';
-    src:    url('../Fonts/Poppins-LightItalic.woff2') format('woff2'),
-            url('../Fonts/Poppins-LightItalic.woff') format('woff'),
-            url('../Fonts/Poppins-LightItalic.ttf') format('truetype');
+    src:    url('../fonts/Poppins-LightItalic.woff2') format('woff2'),
+            url('../fonts/Poppins-LightItalic.woff') format('woff'),
+            url('../fonts/Poppins-LightItalic.ttf') format('truetype');
     font-weight: lighter;
     font-style: italic;
 }
@@ -69,4 +69,27 @@
 #nav_haut ul a:hover div p {
     color: #000000;
 
+}
+#boite{
+    background-color: #D9D9D9;
+}
+#bleu{
+    background-color: #0C4C8C;
+    color:white
+}
+#grand_bleu{
+    background-color: #0C4C8C;
+}
+#petit_blanc{
+    background-color: white;
+}
+#blanc{
+    background-color: white;
+}
+img{
+    float : left
+}
+article{
+    margin-left: 10%;
+    margin-right: 10%;
 }
