--- a/css/style_sponsors.css
+++ b/css/style_sponsors.css
@@ -72,6 +72,7 @@
 }
 #boite{
     background-color: #D9D9D9;
+    max-width: 125px;
 }
 #bleu{
     background-color: #0C4C8C;
@@ -82,6 +83,7 @@
 }
 #petit_blanc{
     background-color: white;
+    max-width: 160px;
 }
 #blanc{
     background-color: white;
