--- a/css/style_sponsors.css
+++ b/css/style_sponsors.css
@@ -25,6 +25,9 @@
     font-weight: lighter;
     font-style: italic;
 }
+body{
+    font-family: 'Poppins';
+}
 /*style de la nav du haut*/
 
 #nav_haut {
@@ -72,7 +75,7 @@
 }
 #boite{
     background-color: #D9D9D9;
-    max-width: 125px;
+    max-width: 150px;
 }
 #bleu{
     background-color: #0C4C8C;
@@ -90,16 +93,17 @@
 }
 #grand_bleu{
     background-color: #0C4C8C;
-    width: auto;
+    width: 1200px;
 }
 #petit_blanc{
     background-color: white;
-    max-width: 160px;
+    max-width: 200px;
+    margin-left: 2%;
 }
 #blanc{
     background-color: #ffffff;
     width: 800px;
-    margin-left: 20%;
+    margin-left: 23%;
     margin-right: 10%;
     text-align: justify;
     padding: 20px;
@@ -112,7 +116,7 @@ img{
     cursor: pointer;
 }
 article{
-    margin-left: 10%;
+    margin-left: 15%;
     margin-right: 10%;
 }
 .image{
