--- a/css/style_index.css
+++ b/css/style_index.css
@@ -114,7 +114,7 @@ body {
     margin-bottom: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
-    height: 130px;
+    height: 100px;
 }
 
 #nav_haut ul {
@@ -130,13 +130,13 @@ body {
     background-color: #0c4c8c;
     margin-right: -5px;
     padding: 0px;
-    height: 130px;
+    height: 100px;
     text-align: center;
     vertical-align: middle;
 }
 
 #nav_haut ul a div p {
-    margin-top: 45px;
+    margin-top: 28px;
     text-decoration: none;
     color: #ffffff;
     font-size: 24px;
@@ -263,7 +263,7 @@ body {
 }
 
 .carousel:hover .group {
-        animation-play-state: paused;
+    animation-play-state: paused;
 }
 
 @keyframes scrolling {
@@ -288,4 +288,52 @@ body {
     100% {
         transform: translateX(-100%);
     }
-  }
+}
+
+/*animation de la nav du bas*/
+
+#nav_bas {
+    margin-top: 100px;
+}
+
+#nav_bas ul {
+    width: 70%;
+    height: 90px;
+    margin: auto;
+}
+
+#nav_bas ul a div {
+    display: inline-flex;
+    background-color: #007fff;
+    width: 20%;
+    height: 100%;
+    margin-right: 4%;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+
+}
+
+#nav_bas ul a div p {
+    max-width: 50%;
+    margin: auto;
+    margin-top: 15px;
+    text-align: center;
+    color: #ffffff;
+    font-size: 18px;
+}
+
+#nav_bas ul a div:hover {
+    background-color: #0c4c8c;
+    height: 140px;
+    will-change: translation;
+    animation: montee 0.5s ease-in-out forwards;
+}
+
+@keyframes montee {
+    0% {
+        transform: translateY(0px);
+    }
+    100% {
+        transform: translateY(-50px);
+    }
+}
