--- a/css/style_statistique.css
+++ b/css/style_statistique.css
@@ -30,6 +30,11 @@ and (orientation : landscape) {
     font-weight: lighter;
     font-style: italic;
 }
+
+body {
+    margin: 0px;
+}
+
 /*style de la nav du haut*/
 
 #nav_haut {
