--- a/css/style_biographie.css
+++ b/css/style_biographie.css
@@ -35,6 +35,7 @@ button {
     display: none;
 }
 
+/*---Menu nav du haut------------------------------------------------------------------------------*/
 #nav_haut {
     width: 100%;
     background-color: #007fff;
@@ -42,16 +43,14 @@ button {
     margin-bottom: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
-    height: 65px;
+    height: 100px;
 }
 
 #nav_haut ul {
-    display: flexbox; /* Permet un alignement flexible */
-    justify-content: space-around; /* Espacement uniforme entre les boutons */
-    align-items: center;
-    margin: 0; 
-    padding: 0; 
-    list-style: none; /* Supprime les puces des listes */
+    width: 80%;
+    margin: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 #nav_haut ul a div {
@@ -60,13 +59,13 @@ button {
     background-color: #0c4c8c;
     margin-right: -5px;
     padding: 0px;
-    height: 65px;
+    height: 100px;
     text-align: center;
     vertical-align: middle;
 }
 
 #nav_haut ul a div p {
-    margin-top: 14px;
+    margin-top: 28px;
     text-decoration: none;
     color: #ffffff;
     font-size: 24px;
@@ -78,9 +77,8 @@ button {
 
 #nav_haut ul a:hover div p {
     color: #000000;
-    text-decoration: underline;
 }
-
+/*Menu nav du bas -------------------------------------------------------------------------------*/
 #intro {
     text-align: justify;
     margin: 20px 0 20px 0;
@@ -171,6 +169,67 @@ h3 {
     margin: 0px;
 }
 
+
+
+@media only screen 
+    and (max-device-width : 600px) { /*menu hamburger*/
+    body {
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    button {
+        display: block;
+        height: 25px;
+        width: 25px;
+        margin: 2px 0 0 5px;
+        background-color: #fff;
+        border-radius: 4px;
+        border: 0px;
+    }
+
+    button img {
+        height: 20px;
+        width: 20px;
+        margin-left: -3px;
+    }
+
+    #nav_haut {
+        background-color: #ffffff00;
+        position: absolute;
+        left: -100%;
+        display: none;
+    }
+
+    @keyframes deroule {
+        0% {
+            transform: translateX(-100%)
+        }
+        100% {
+            transform: translateX(0px)
+        }
+    }
+
+    button:active #nav_haut {
+        will-change: translation;
+        animation: deroule;
+        display: block;
+    }
+
+    #nav_haut a {
+        display: block;
+        width: 600px;
+    }
+}
+
+@media only screen 
+    and (max-device-width : 450px) {
+    img {
+        width: 100%;
+        height: auto;
+    }
+}
+
 /*animation de la nav du bas*/
 
 #nav_bas {
@@ -230,64 +289,5 @@ h3 {
     and (max-device-width : 883px) {
     #nav_haut ul #voile div p {
         margin-top: 2px;
-    }
-}
-
-@media only screen 
-    and (max-device-width : 600px) { /*menu hamburger*/
-    body {
-        width: 100%;
-        overflow-x: hidden;
-    }
-
-    button {
-        display: block;
-        height: 25px;
-        width: 25px;
-        margin: 2px 0 0 5px;
-        background-color: #fff;
-        border-radius: 4px;
-        border: 0px;
-    }
-
-    button img {
-        height: 20px;
-        width: 20px;
-        margin-left: -3px;
-    }
-
-    #nav_haut {
-        background-color: #ffffff00;
-        position: absolute;
-        left: -100%;
-        display: none;
-    }
-
-    @keyframes deroule {
-        0% {
-            transform: translateX(-100%)
-        }
-        100% {
-            transform: translateX(0px)
-        }
-    }
-
-    button:active #nav_haut {
-        will-change: translation;
-        animation: deroule;
-        display: block;
-    }
-
-    #nav_haut a {
-        display: block;
-        width: 600px;
-    }
-}
-
-@media only screen 
-    and (max-device-width : 450px) {
-    img {
-        width: 100%;
-        height: auto;
     }
 }
