--- a/css/style_sponsors.css
+++ b/css/style_sponsors.css
@@ -27,6 +27,7 @@
 }
 body{
     font-family: 'Poppins';
+    margin: 0px;
 }
 /*style de la nav du haut*/
 
@@ -37,7 +38,7 @@ body{
     margin-bottom: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
-    height: 130px;
+    height: 100px;
 }
 
 #nav_haut ul {
@@ -53,13 +54,13 @@ body{
     background-color: #0c4c8c;
     margin-right: -5px;
     padding: 0px;
-    height: 130px;
+    height: 100px;
     text-align: center;
     vertical-align: middle;
 }
 
 #nav_haut ul a div p {
-    margin-top: 45px;
+    margin-top: 28px;
     text-decoration: none;
     color: #ffffff;
     font-size: 24px;
@@ -71,8 +72,8 @@ body{
 
 #nav_haut ul a:hover div p {
     color: #000000;
-
 }
+
 #boite{
     background-color: #D9D9D9;
     max-width: 150px;
