--- a/css/style_index.css
+++ b/css/style_index.css
@@ -334,13 +334,14 @@ body {
         transform: translateY(0px);
     }
     100% {
-        transform: translateY(-50px);
+        transform: translateY(-49px);
     }
 }
 
 /*style du footer*/
 
 footer {
+    border-top: #073664 solid 5px;
     background-color: #0c4c8c;
     height: 100px;
     margin-bottom: -10px;
