--- a/css/style_sponsors.css
+++ b/css/style_sponsors.css
@@ -1,4 +1,8 @@
 
+@media only screen
+and (min-device-width : 1024px)
+and (max-device-width : 5000px)
+and (orientation : landscape) {
 @font-face {
     font-family: 'Poppins';
     src:    url('../fonts/Poppins-Medium.woff2') format('woff2'),
@@ -110,7 +114,7 @@ body{
     height: 140px;
     will-change: translation;
     animation: montee 0.5s ease-in-out forwards;
-    animation-iteration-count: ;
+
 }
 
 @keyframes montee {
@@ -210,4 +214,240 @@ footer #ins {
     height: 48px;
     width: 48px;
     vertical-align: baseline;
+}
+}
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape){
+@font-face {
+    font-family: 'Poppins';
+    src:    url('../fonts/Poppins-Medium.woff2') format('woff2'),
+            url('../fonts/Poppins-Medium.woff') format('woff'),
+            url('../fonts/Poppins-Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+    
+@font-face {
+    font-family: 'Poppins';
+    src:    url('../fonts/Poppins-Light.woff2') format('woff2'),
+            url('../fonts/Poppins-Light.woff') format('woff'),
+            url('../fonts/Poppins-Light.ttf') format('truetype');
+    font-weight: lighter;
+    font-style: normal;
+}
+    
+@font-face {
+    font-family: 'Poppins';
+    src:    url('../fonts/Poppins-LightItalic.woff2') format('woff2'),
+            url('../fonts/Poppins-LightItalic.woff') format('woff'),
+            url('../fonts/Poppins-LightItalic.ttf') format('truetype');
+    font-weight: lighter;
+    font-style: italic;
+}
+body{
+    font-family: 'Poppins';
+    margin: 0px;
+}
+#nav_haut{
+    display: none;
+}
+/*animation de la nav du bas*/
+
+#nav_bas {
+    margin-top: 100px;
+}
+
+#nav_bas ul {
+    width: 70%;
+    height: 90px;
+    margin: auto;
+}
+
+#nav_bas ul a div {
+    display: inline-flex;
+    background-color: #007fff;
+    width: 20%;
+    height: 100%;
+    margin-right: 4%;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+
+}
+
+#nav_bas ul a div p {
+    max-width: 50%;
+    margin: auto;
+    margin-top: 15px;
+    text-align: center;
+    color: #ffffff;
+    font-size: 18px;
+}
+
+#nav_bas ul a div:hover {
+    background-color: #0c4c8c;
+    height: 140px;
+    will-change: translation;
+    animation: montee 0.5s ease-in-out forwards;
+
+}
+
+@keyframes montee {
+    0% {
+        transform: translateY(0px);
+    }
+    100% {
+        transform: translateY(-50px);
+    }
+}
+.image{
+    width: 200px;
+    margin-left: 2%;
+    position: relative;
+}
+img{
+    float : left;
+    cursor: pointer;
+}
+#petit_blanc{
+    background-color: #ffffff;
+    max-width: 200px;
+    position: absolute;
+}
+#boite{
+    background-color: #D9D9D9;
+    max-width: 150px;
+}
+article{
+    margin-left: 15%;
+    margin-right: 10%;
+    text-align: center;
+}
+#grand_bleu{
+    background-color: #0C4C8C;
+    width: 1200px;
+}
+#blanc{
+    background-color: #ffffff;
+    width: 800px;
+    margin-left: 23%;
+    margin-right: 10%;
+    text-align: justify;
+    padding: 20px;
+    border-radius: 0px 5px 5px 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: auto;
+}
+}
+@media only screen
+and (min-device-width : 0px)
+and (max-device-width : 901px)
+and (orientation : portrait) {
+    @font-face {
+        font-family: 'Poppins';
+        src:    url('../fonts/Poppins-Medium.woff2') format('woff2'),
+                url('../fonts/Poppins-Medium.woff') format('woff'),
+                url('../fonts/Poppins-Medium.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+    }
+    
+    @font-face {
+        font-family: 'Poppins';
+        src:    url('../fonts/Poppins-Light.woff2') format('woff2'),
+                url('../fonts/Poppins-Light.woff') format('woff'),
+                url('../fonts/Poppins-Light.ttf') format('truetype');
+        font-weight: lighter;
+        font-style: normal;
+    }
+    
+    @font-face {
+        font-family: 'Poppins';
+        src:    url('../fonts/Poppins-LightItalic.woff2') format('woff2'),
+                url('../fonts/Poppins-LightItalic.woff') format('woff'),
+                url('../fonts/Poppins-LightItalic.ttf') format('truetype');
+        font-weight: lighter;
+        font-style: italic;
+    }
+    body{
+        font-family: 'Poppins';
+        margin: 0px;
+    }
+    /*style de la nav du haut*/
+
+#nav_haut {
+    width: 100%;
+    background-color: #007fff;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    height: 100px;
+    display: none;
+}
+
+#nav_haut ul {
+    width: 80%;
+    margin: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+#nav_haut ul a div {
+    display: inline-block;
+    width: 25%;
+    background-color: #0c4c8c;
+    margin-right: -5px;
+    padding: 0px;
+    height: 100px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+#nav_haut ul a div p {
+    margin-top: 28px;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 24px;
+}
+
+#nav_haut ul a:hover div {
+    background-color: #ffffff;
+}
+
+#nav_haut ul a:hover div p {
+    color: #000000;
+}
+#nav_bas {
+    display: none;
+}
+#boite{
+    background-color: #D9D9D9;
+    max-width: 150px;
+}
+#petit_blanc{
+    background-color: #D9D9D9;
+    max-width: 200px;
+    position: absolute;
+}
+article{
+    margin-left: 15%;
+    margin-right: 10%;
+}
+.image{
+    width: 200px;
+    margin-left: 2%;
+    position: relative;
+}
+img{
+    float : left;
+    cursor: pointer;
+}
+#bleu{
+    display: none;
+}
+#blanc{
+    display: none;
+}
 }
